--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,3 +2,32 @@
     margin: 0px;
     padding: 0px;
 }
+.container1-about {
+    background-color: #d1d1d1;
+    display: flex;
+    flex-direction: column;
+    gap: 1vw;
+    
+}
+.container1-about div a {
+    text-decoration: none;
+    color: black;
+    font-size: 0.8vw;
+    font-weight: 600;
+}
+.container1-about div a:hover {
+    color: #ff6600;
+}
+.container1-about div {
+    margin-left: 5vw;
+    margin-top: 1vw;
+}
+.container1-about h1 {
+    margin-left: 5vw;
+}
+.nav-link:hover {
+    color: #ff6600;
+}
+.bi:hover {
+    color: #ff6600;
+}
