--- a/public/css/app.css
+++ b/public/css/app.css
@@ -132,7 +132,7 @@ ul
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ff6600;
+    background-color: white;
     padding: 1.5vh 8vw;}
 
 .home-header-nav-left{
