--- a/public/css/app.css
+++ b/public/css/app.css
@@ -487,4 +487,52 @@ ul
 
 
 
-/* * */
+/* * fin mid2*/
+
+
+/* *mid3 */
+
+.mid3{
+    display: flex;
+    gap: 2vw;
+    margin-inline: 10vw;
+    margin-top: 10vh;
+}
+
+.mid3-right
+{
+    width: 100%;
+    background-color: red;
+    margin-top: 1vh;
+}
+.mid3-left  
+{
+    width: 100%;
+    /* background-color: gold; */
+    margin-top: 1vh;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+}
+
+.mid3-right>img
+{
+    width: 100%;
+    
+}
+.mid3-left>ul>li
+{
+    display: flex;
+    margin-left: -30px;
+    gap: 0.5vw;
+}
+
+li>svg
+{
+    flex-shrink: 0;
+}
+
+
+
+
+/* *fin mid3 */
