fix: fixed colors in index.html

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -349,6 +349,15 @@ ul
     color: #444444;
 }
 
+.color-p-grey-low-opacity
+{
+    color: #4444449f;
+}
+
+.color-icon-light-grey
+{
+    color: #b1b1b1;
+}
 
 /* * header */
 
