--- a/public/css/app.css
+++ b/public/css/app.css
@@ -917,7 +917,7 @@ ul
     position: absolute;  
     left: 0;
     top: 0;
-    background-color: #d9534f;
+    background-color: #e96b56;
     width: 100%;
     height: 100%;
     z-index: -2;
@@ -1033,7 +1033,7 @@ li>svg
 .mid4-card
 {
     /* background-color: white; */
-    box-shadow: 0px 0px 0px 1px black;
+    box-shadow: 0px 0px 4px 1px black;
     display: flex;
     flex-direction: column;
     align-items: center;
